# verbatim

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  pyproject.toml
docs/: dataset_design.md
evals/: ground_truth.json  job_ground_truth.json
evals/runs/: agent_v1_20260522_173433.json  agent_v1_20260522_175027.json  agent_v1_20260522_175602.json  naive_rag_20260522_175602.json
job_transcripts/: 01_behavioral_swe.md  02_system_design.md  03_coding_strings.md  04_behavioral_failure.md  05_project_deep_dive.md  06_why_this_company.md
src/: agent.py  app.py  chunker.py  eval.py  ingest.py  judge.py  mcp_server.py  naive_rag.py  stub_pipeline.py  test_chunker.py  test_eval.py  types.py  vector_store.py
transcripts/: 01_sarah.md  02_marcus.md  03_priya.md  04_tom.md  05_diana.md  06_jamal.md  07_lena.md  08_rafael.md  09_chloe.md  10_yuki.md
